k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: demoappp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demoapp-service
                port:
                  number: 80
